fix: Disable sticky product image on mobile for natural scrolling

--- a/src/app/product/[id]/page.module.css
+++ b/src/app/product/[id]/page.module.css
@@ -16,8 +16,7 @@
 }
 
 .imageGallery {
-  position: sticky;
-  top: 6rem;
+  position: relative;
 }
 
 .mainImageContainer {
@@ -163,5 +162,17 @@
   
   .page {
     padding-bottom: 6rem; /* Make room for sticky bar */
+  }
+
+  .imageGallery {
+    position: relative;
+    top: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .imageGallery {
+    position: sticky;
+    top: 6rem;
   }
 }
